- Fixed z-index on teacher faq buttons

--- a/teamb2l/app/web/assets/stylesheets/FAQs.css
+++ b/teamb2l/app/web/assets/stylesheets/FAQs.css
@@ -41,6 +41,7 @@ header {
     font-family: "Montserrat";
     font-size: 13px;
     color: rgb(225, 196, 92);
+    z-index: 1;
 }
 
 #mail {
